# gh-actions

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml
code/: CMakeLists.txt
code/mylib/: sum.cpp  sum.hpp
test/: CMakeLists.txt  t-sum.cpp
